# shadow-cloud

./: .dockerignore  .gitignore  README.md  TODO.txt  docker-compose.base.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.base.json  turbo.json
.github/: copilot-instructions.md
.github/workflows/: publish-container.yml  publish-desktop.yml
apps/api/: Dockerfile  package.json  prisma.config.mjs  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/api/prisma/: dev.db  schema.prisma
apps/api/src/: api-cors.ts  api-port.ts  app.module.ts  app.service.ts  database.ts  main.ts
apps/api/test/: api-cors.test.ts  api-port.test.ts  game-detail-file-version-payload.test.ts  upload-save-naming.test.ts
apps/bot/: Dockerfile  eslint.config.mjs  package.json  tsconfig.json
apps/bot/scripts/: dev.mjs
apps/bot/src/: bot-api.ts  commands.ts  config.ts  index.ts  interaction-handler.ts  notification-server.ts  notifications.ts  startup-thread-sync.ts  thread-name.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/src/: auth.ts  (+3 more)
scripts/: detect-container-changes.mjs  detect-container-changes.test.mjs  dev-env.mjs
(+133 files in other folders)
